<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kekmicrosys.qallme.MyDataActivity">

    <TableLayout
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_span="2"
                android:text="@string/titmisdatos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tit_misdatos"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textPersonName"
                android:ems="10"
                android:id="@+id/txt_apellido"
                android:hint="@string/lblapellido" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textPersonName"
                android:ems="10"
                android:id="@+id/txt_nombre"
                android:hint="@string/lblnombre" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/txt_celnum"
                android:hint="@string/lbltelefono" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:text="@string/btncancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_backmydata"
                android:onClick="btnBack" />

            <Button
                android:text="@string/btnguardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_savemydata"
                android:onClick="saveMyData" />

        </TableRow>
    </TableLayout>
</RelativeLayout>
