<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_receiver"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kekmicrosys.qallme.ReceiverActivity">

    <TableLayout
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_titulo_con"
                android:text="@string/titagregarcto"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txt_cto_ape"
                android:hint="@string/lblapellido" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txt_cto_nom"
                android:hint="@string/lblnombre" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/txt_cto_cel"
                android:hint="@string/lbltelefono" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" >

            <fragment
                android:id="@+id/mapa"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_span="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:text="@string/btnrechazar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_reject"
                android:onClick="rejectContact" />

            <Button
                android:text="@string/btnagregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_addcto"
                android:onClick="addContact" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
