<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kekmicrosys.qallme.MainActivity">

    <TableLayout
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TableRow

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_span="3"
                android:text="@string/msj_00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_01"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:text="@string/btnsalir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_quit"
                android:onClick="quitApp" />

            <Button
                android:text="@string/btnmisdatos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_mydata"
                android:onClick="frmMyData" />

            <Button
                android:text="@string/btncontactos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_mycontacts"
                android:onClick="listContacts" />
        </TableRow>

    </TableLayout>
</RelativeLayout>
